--- a/index.html
+++ b/index.html
@@ -1,71 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./resources/css/style.css" />
 
-    <title>Psiyard</title>
-  </head>
-  <body>
-    <nav>
-      <div class="flex">
-        <h1 class="title nav-item">Psiyard</h1>
-        <img src="./resources/images/duck_svg.svg" alt="" />
-      </div>
-    </nav>
-    <main>
-      <div class="col-6 main-item">
-        <div class="main-item-title">Aulas</div>
+    <title>Confirmação de Amizade</title>
+</head>
+<body>
+    <h1 class="title">
+        Confirmação de Amizade
+    </h1>
+    <modal>
 
-        <div class="main-item-content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id est
-          sit amet ante cursus eleifend. Nulla vel erat elit. Donec eget mollis
-          ex. Cras ut sem augue. Fusce in dignissim nibh. Sed elementum in risus
-          ac condimentum. Nulla scelerisque lorem pharetra enim faucibus
-          fringilla. Aenean tortor tortor, placerat sit amet neque vitae,
-          tincidunt pharetra ante.
+        <div class="content" id="Max">
+Prezade(o)(a), você passou no processo seletivo de amigue do Marcus Vinícius. Parabéns! Eu acho...
+<div class="content"><input type="checkbox" name="" id="" required> Li e concordo com os <a href="./termos_e_condições.html"> termos e condições</a>.</div>
+<div class="content"><button type="submit"> Aceito </button> <button> Aceito!!</button></div>
         </div>
-      </div>
-      <div class="col-6 main-item">
-        <div class="main-item-title">Leituras</div>
-
-        <div class="main-item-content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id est
-          sit amet ante cursus eleifend. Nulla vel erat elit. Donec eget mollis
-          ex. Cras ut sem augue. Fusce in dignissim nibh. Sed elementum in risus
-          ac condimentum. Nulla scelerisque lorem pharetra enim faucibus
-          fringilla. Aenean tortor tortor, placerat sit amet neque vitae,
-          tincidunt pharetra ante.
-        </div>
-      </div>
-
-      <div class="col-6 main-item">
-        <div class="main-item-title">Outras coisas</div>
-
-        <div class="main-item-content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id est
-          sit amet ante cursus eleifend. Nulla vel erat elit. Donec eget mollis
-          ex. Cras ut sem augue. Fusce in dignissim nibh. Sed elementum in risus
-          ac condimentum. Nulla scelerisque lorem pharetra enim faucibus
-          fringilla. Aenean tortor tortor, placerat sit amet neque vitae,
-          tincidunt pharetra ante.
-        </div>
-      </div>
-
-      <div class="col-6 main-item">
-        <div class="main-item-title">Blá</div>
-
-        <div class="main-item-content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id est
-          sit amet ante cursus eleifend. Nulla vel erat elit. Donec eget mollis
-          ex. Cras ut sem augue. Fusce in dignissim nibh. Sed elementum in risus
-          ac condimentum. Nulla scelerisque lorem pharetra enim faucibus
-          fringilla. Aenean tortor tortor, placerat sit amet neque vitae,
-          tincidunt pharetra ante.
-        </div>
-      </div>
-    </main>
-  </body>
+    </modal>
+    <script src="./resources/js/index.js">    </script>
+</body>
 </html>
