--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <modal>
 
         <div class="content" id="Max">
-Prezade(o)(a), você passou no processo seletivo de amigue do Marcus Vinícius. Parabéns! Eu acho... teste
+Prezade(o)(a), você passou no processo seletivo de amigue do Marcus Vinícius. Parabéns! Eu acho...
 <div class="content"><input type="checkbox" name="" id="" required> Li e concordo com os <a href="./termos_e_condições.html"> termos e condições</a>.</div>
 <div class="content"><button type="submit"> Aceito </button> <button> Aceito!!</button></div>
         </div>
