--- a/termos_e_condições.html
+++ b/termos_e_condições.html
@@ -8,166 +8,22 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 class="title">
-        Termos e Condições
-    </h1>
-    <div class="content"> Leia com bastante atenção.</div>
+    <h1 class="title">Termos e Condições</h1>
+    <div class="content">Leia com bastante atenção.</div>
     <div class="lorem content">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac ornare
-      metus, sit amet cursus arcu. Vestibulum ullamcorper, ipsum fringilla
-      sodales tincidunt, mauris nisi porttitor lorem, sed tempor purus erat vel
-      nisi. Sed libero magna, porttitor et venenatis vitae, mattis vitae magna.
-      Nam et enim nisl. Integer dignissim luctus aliquam. Nam dignissim odio et
-      placerat interdum. Praesent convallis urna et consequat dapibus.
-      Vestibulum rhoncus ultrices tortor, sit amet elementum mauris. Aliquam
-      feugiat tortor at enim sollicitudin, at fermentum eros tempus. In euismod
-      purus ac augue feugiat imperdiet vitae quis leo. Pellentesque ut urna non
-      massa venenatis dapibus vel eu arcu. Nulla in lacus consequat, auctor
-      dolor nec, scelerisque ante. Pellentesque gravida volutpat felis, non
-      rhoncus turpis ornare vel. Interdum et malesuada fames ac ante ipsum
-      primis in faucibus. Duis congue lacus sapien. Morbi augue lacus, cursus id
-      neque eu, consectetur ullamcorper neque. Duis quis turpis in lacus egestas
-      gravida. Duis semper nisi in lorem pretium congue. Quisque id porta velit.
-      Suspendisse potenti. Morbi in nibh hendrerit orci hendrerit sagittis ac eu
-      purus. Curabitur aliquam sapien ac imperdiet consequat. Donec risus nisi,
-      finibus sit amet volutpat quis, ornare id nulla. Fusce hendrerit
-      ullamcorper risus in posuere. Mauris quis pretium enim. In justo leo,
-      tristique vitae porta ut, maximus id purus. Maecenas ac ante eu nibh
-      pretium fermentum. Vestibulum interdum nisi massa, non posuere orci
-      aliquet at. Maecenas non rhoncus nisl, ac bibendum elit. In varius, ipsum
-      a placerat tempor, tellus arcu vehicula sapien, sit amet convallis magna
-      leo tristique diam. Praesent nec ipsum nec sem venenatis vestibulum ac sed
-      diam. Morbi lacinia turpis quis pulvinar ullamcorper. Fusce hendrerit
-      vehicula arcu, sit amet tincidunt urna dignissim sed. In auctor nec orci
-      ac cursus. Maecenas tincidunt nunc nec quam posuere, nec tincidunt lectus
-      hendrerit. Ut lacinia, nunc ac luctus efficitur, dolor elit dictum augue,
-      semper semper mi diam non odio. Curabitur ac nisl lorem. Donec blandit
-      gravida arcu, ac luctus nibh. Suspendisse commodo bibendum ex, eu
-      pellentesque libero varius vel. Phasellus et arcu augue. In hac habitasse
-      platea dictumst. Nam id imperdiet odio, nec sodales ligula. Proin nec
-      felis congue, pellentesque neque et, condimentum quam. Phasellus finibus
-      hendrerit augue sit amet placerat. Nunc sed ornare ipsum, ut rhoncus
-      risus. Nam accumsan lobortis pharetra. Integer condimentum tortor ex.
-      Aliquam erat volutpat. Donec molestie tempor tincidunt. Sed semper est
-      interdum, venenatis ligula finibus, fringilla tellus. Integer dapibus
-      nulla id lorem eleifend finibus. Mauris sit amet imperdiet lectus. Donec
-      quis odio mattis, vulputate mi a, commodo neque. Quisque ac mattis neque,
-      lobortis viverra leo. Vivamus molestie justo fermentum justo pretium
-      efficitur. Suspendisse mollis sollicitudin eros, ut molestie augue
-      venenatis in. Praesent convallis nisl et nisi convallis iaculis quis non
-      ante. Etiam luctus felis nec erat eleifend suscipit. Maecenas volutpat
-      nulla posuere leo porttitor, ac luctus odio molestie. Etiam orci est,
-      imperdiet in molestie sit amet, pellentesque porttitor lorem. Proin
-      bibendum, odio id feugiat fermentum, leo ipsum congue urna, in hendrerit
-      augue massa sit amet nulla. Sed ac est erat. Mauris enim neque, eleifend
-      nec malesuada vitae, interdum consequat dui. Cras auctor pretium erat, in
-      finibus nulla ornare sed. Morbi ac justo in urna auctor varius vel vel
-      orci. Vivamus ut urna a ligula commodo condimentum. Pellentesque placerat
-      massa sit amet mi aliquam, non dignissim purus auctor. Praesent aliquet
-      egestas felis eu interdum. Sed euismod justo sit amet ligula elementum,
-      non viverra purus aliquet. Sed lobortis nisi et blandit imperdiet. Nunc ut
-      varius justo. Morbi vel nulla in nulla porta lobortis consectetur et nisi.
-      Etiam sed elementum odio. Quisque eget ornare sem. Donec fringilla quam
-      non felis luctus, a pretium sem tempor. Suspendisse potenti. Ut efficitur
-      massa elit, eget aliquam arcu accumsan sed. Cras turpis dolor, aliquet
-      quis mollis eget, tincidunt eget diam. Donec et odio porttitor, feugiat
-      ipsum eu, feugiat leo. Mauris at enim enim. Proin nec faucibus lorem, ac
-      cursus justo. Fusce rhoncus dui quis odio volutpat maximus. Integer vel
-      dolor in libero venenatis vestibulum sed bibendum tortor. Phasellus ac
-      commodo odio, sed commodo diam. Integer laoreet dui sed ultricies viverra.
-      Fusce dictum tellus vitae aliquam posuere. Duis eget ex non lectus feugiat
-      dapibus. Nulla blandit elit nec sodales cursus. Vivamus tincidunt, urna
-      vitae congue tristique, odio magna aliquam lacus, blandit dignissim diam
-      mi sit amet sapien. Proin non ligula lorem. Nulla in ullamcorper nisi.
-      Etiam eu malesuada quam. Nam sit amet sem efficitur, fringilla orci ac,
-      iaculis elit. Sed facilisis dui luctus nisi venenatis, a rutrum mi
-      finibus. Cras pulvinar tristique nisi sit amet euismod. In id interdum
-      nunc, ut interdum odio. Aenean efficitur placerat nisl, nec ullamcorper
-      felis congue sit amet. Pellentesque sit amet elementum ante. Donec
-      finibus, leo nec placerat lacinia, velit quam condimentum sapien,
-      dignissim convallis neque metus ac orci. Etiam porta orci arcu, at tempus
-      nulla volutpat quis. Praesent auctor neque dolor, eu volutpat magna
-      vulputate ac. Mauris sit amet sapien hendrerit, tristique neque et, congue
-      nibh. Vivamus vulputate ultrices est, eget convallis quam congue vel.
-      Vestibulum vel risus tincidunt, ullamcorper nisl sit amet, ultricies
-      felis. Etiam dignissim arcu ac est ultrices tempus. Vivamus viverra
-      dignissim risus, et mollis turpis commodo non. Quisque nec venenatis
-      tellus. Nam tempus vehicula eleifend. Vivamus cursus magna faucibus risus
-      cursus rhoncus. Aliquam dictum risus non dignissim tempus. Suspendisse sed
-      nisi vel magna mattis luctus non ac ipsum. Vestibulum fringilla lectus
-      eget pellentesque pellentesque. Proin efficitur magna in massa maximus,
-      quis cursus libero fringilla. Proin ac accumsan libero. Proin sed cursus
-      ipsum. Aenean vulputate, libero in convallis laoreet, dui orci consequat
-      sem, vel efficitur nulla purus non purus. Cras purus risus, efficitur in
-      congue dictum, bibendum eu dui. Etiam et dictum urna, sed maximus mi.
-      Fusce sagittis, turpis nec vehicula pharetra, quam lacus ultricies tellus,
-      a convallis lacus turpis vestibulum arcu. Duis elementum elementum neque,
-      sed fermentum nunc consequat ut. Aliquam volutpat augue vitae diam auctor,
-      a posuere felis commodo. Phasellus ut luctus purus. Morbi a elementum
-      tortor, at maximus purus. Vestibulum eu lectus in nibh ultricies sodales
-      et vitae odio. Fusce ullamcorper nulla felis, a varius felis sollicitudin
-      at. Etiam nisl mauris, rutrum nec tempus ut, varius vitae mauris. Etiam
-      vestibulum, dolor sed pulvinar volutpat, nisi nunc dignissim felis, eget
-      feugiat enim dolor ut magna. Orci varius natoque penatibus et magnis dis
-      parturient montes, nascetur ridiculus mus. Donec augue risus, cursus nec
-      lacinia vitae, porttitor vel justo. Praesent feugiat neque sed turpis
-      molestie, ut aliquam mi lobortis. Integer ac sem semper, ornare mauris a,
-      varius turpis. Vivamus lacinia condimentum magna, at bibendum massa
-      tincidunt a. Sed lobortis aliquet est, eu elementum velit egestas et.
-      Integer volutpat, velit nec tempus ultricies, lacus nulla sodales justo,
-      vitae fringilla sapien ligula in nunc. Curabitur elementum libero
-      consectetur, aliquet ipsum molestie, feugiat nulla. Sed vitae est id
-      tellus luctus porta. Phasellus consequat, justo nec fermentum porttitor,
-      sem augue auctor neque, quis sagittis felis nisl in nulla. Praesent
-      euismod blandit feugiat. Nullam quis est sed leo tristique aliquet at sit
-      amet quam. Quisque volutpat id mauris vitae sodales. Proin id orci nunc.
-      Proin rhoncus arcu dignissim posuere ultrices. Pellentesque lobortis ante
-      vitae convallis sagittis. Aliquam efficitur placerat sem, in sagittis
-      libero vestibulum quis. Suspendisse iaculis pulvinar metus. Duis et tortor
-      vitae orci vehicula vestibulum. Proin posuere rutrum elit a cursus. Duis
-      in mollis dui. Ut sit amet nulla eu augue dictum pharetra non non quam.
-      Quisque convallis lacus ac nisi luctus sodales. Interdum et malesuada
-      fames ac ante ipsum primis in faucibus. In eleifend lectus pharetra,
-      malesuada diam porta, tempor diam. In dictum euismod felis quis efficitur.
-      Integer dui diam, rhoncus at neque quis, blandit luctus ex. Mauris ut
-      faucibus velit. Mauris et velit pharetra, blandit lectus sit amet,
-      faucibus nisi. Integer euismod neque quis maximus bibendum. Sed eu magna
-      pharetra, aliquam eros sit amet, lacinia dolor. Ut ut justo odio. Proin
-      iaculis rutrum ipsum, et cursus nulla bibendum non. Curabitur congue
-      tortor id tincidunt consequat. Cras eros urna, interdum vitae pretium non,
-      tincidunt vel turpis. Phasellus consectetur cursus dictum. Morbi pharetra
-      eros ut laoreet tempor. Mauris lectus ex, dignissim ac est vitae, blandit
-      semper augue. Aenean ultrices blandit dolor, nec ullamcorper nulla laoreet
-      eget. Praesent id enim sagittis, dictum orci sit amet, tincidunt tortor.
-      Vestibulum tempus id dui aliquet tristique. Morbi sagittis felis enim, eu
-      auctor velit scelerisque vel. Donec pellentesque dictum elit, at pulvinar
-      ante aliquet ut. Aliquam ornare eros venenatis, tempor urna id,
-      pellentesque arcu. Mauris laoreet facilisis orci id congue. Pellentesque
-      varius urna id commodo porta. Pellentesque accumsan orci nisi, in rhoncus
-      augue accumsan quis. Phasellus sed malesuada augue, ac dignissim ex. In
-      luctus urna at turpis ullamcorper tincidunt. Proin a lacus ac metus
-      pharetra vestibulum. In ornare libero vel neque sollicitudin, sit amet
-      gravida sem sagittis. Fusce a nisl sed leo interdum finibus at ut mi.
-      Etiam commodo, odio eu ultricies egestas, ex nisl cursus erat, eget luctus
-      lorem enim nec ipsum. Integer venenatis eget massa quis tempus. In vel
-      nisl in velit interdum aliquet. Sed eget eleifend nisl. Mauris congue urna
-      neque, ac accumsan sem feugiat nec. Proin ac elit eros. Sed porta
-      venenatis libero. Phasellus malesuada porta nisl eu consectetur. Nullam eu
-      sagittis purus. Suspendisse ac dolor nec diam malesuada congue non non
-      turpis. Proin ut cursus sem, tristique pellentesque libero. Suspendisse
-      volutpat nisl vitae metus vestibulum, eget auctor ex finibus. Integer
-      tempor ex sem, non fringilla sapien faucibus sed. Pellentesque habitant
-      morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut
-      eget dignissim lectus, et condimentum ipsum. Curabitur congue libero nec
-      dui congue, sit amet posuere lectus sodales. Nunc dignissim dui at
-      bibendum viverra. Donec scelerisque eros a elit pretium, a lobortis tortor
-      tincidunt. Etiam semper, massa ac placerat auctor, ligula dui bibendum
-      massa, vel posuere metus augue non sem. Mauris malesuada, massa sit amet
-      consectetur mollis, tellus erat volutpat urna, ut sagittis diam justo sed
-      felis. Etiam enim arcu, congue vel mattis at, placerat in magna. Nunc
-      dignissim tellus sed nisi eleifend, nec laoreet mi ultrices. Morbi
-      tincidunt velit vel venenatis vehicula. Donec ac porttitor purus. Nam
-      lorem dolor, pretium sit amet mollis in, vestibulum ut eros. Maecenas
+      Venho por meio deste dizer que desejo oficializar nossa amizade e sob esse
+      sol cristão e valores e paz e amor e harmonia gostaria de confirmar e não
+      sei mais oq eu eu tô falando inciso paragráfo burocracia direitos. Gosto
+      muito de vocÊ e essas coisas e sei lá algum dos deveres pode ser dar bolo
+      no aniversário e um direito pode ser o de pedir um pix de até 5 reais todo
+      mês sem qualquer questionamento. Eu não sei mais o que falar eeeeeeeeeee
+      eu sou a luz das estrelas estrelas bla bla bla bla. Esse texto aqui é o
+      lorem ipsum e famoso e tal e tum e pei e pong. Isso aí. Mauris malesuada,
+      massa sit amet consectetur mollis, tellus erat volutpat urna, ut sagittis
+      diam justo sed felis. Etiam enim arcu, congue vel mattis at, placerat in
+      magna. Nunc dignissim tellus sed nisi eleifend, nec laoreet mi ultrices.
+      Morbi tincidunt velit vel venenatis vehicula. Donec ac porttitor purus.
+      Nam lorem dolor, pretium sit amet mollis in, vestibulum ut eros. Maecenas
       feugiat eros a iaculis pellentesque. Mauris eget iaculis dolor.
       Pellentesque id auctor turpis, eu luctus est. Maecenas pellentesque
       molestie turpis, in eleifend ligula dignissim id. Praesent at dolor eros.
